--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^29.4.2",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
